add some log and error handling
Because troubleshooting background tasks is always a massive pain

--- a/.github/actions/deps/action.yaml
+++ b/.github/actions/deps/action.yaml
@@ -2,6 +2,7 @@ name: Prepare Deps
 runs:
   using: composite
   steps:
+    - uses: m4c0/silog/.github/actions/deps@main
     - uses: m4c0/traits/.github/actions/deps@main
     - uses: m4c0/ecow/.github/actions/checkout@main
       with:
